; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/shell32/wine/extr_clipboard.c_RenderFILENAMEA.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/shell32/wine/extr_clipboard.c_RenderFILENAMEA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"(%p,%p,%u)\0A\00", align 1
@GHND = common dso_local global i32 0, align 4
@GMEM_SHARE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RenderFILENAMEA(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %16 = load i32, i32* @MAX_PATH, align 4
  %17 = zext i32 %16 to i64
  %18 = call i8* @llvm.stacksave()
  store i8* %18, i8** %9, align 8
  %19 = alloca i8, i64 %17, align 16
  store i64 %17, i64* %10, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @TRACE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %20, i32* %21, i32 %22)
  %24 = load i32, i32* %5, align 4
  %25 = load i32*, i32** %6, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @ILCombine(i32 %24, i32 %27)
  store i32 %28, i32* %12, align 4
  %29 = load i32, i32* %12, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  store i32 1, i32* %15, align 4
  br label %61

32:                                               ; preds = %3
  %33 = load i32, i32* %12, align 4
  %34 = call i32 @SHGetPathFromIDListA(i32 %33, i8* %19)
  store i32 %34, i32* %14, align 4
  %35 = load i32, i32* %12, align 4
  %36 = call i32 @SHFree(i32 %35)
  %37 = load i32, i32* %14, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %40, label %39

39:                                               ; preds = %32
  store i32 0, i32* %4, align 4
  store i32 1, i32* %15, align 4
  br label %61

40:                                               ; preds = %32
  %41 = call i32 @strlen(i8* %19)
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %8, align 4
  %43 = load i32, i32* @GHND, align 4
  %44 = load i32, i32* @GMEM_SHARE, align 4
  %45 = or i32 %43, %44
  %46 = load i32, i32* %8, align 4
  %47 = call i32 @GlobalAlloc(i32 %45, i32 %46)
  store i32 %47, i32* %13, align 4
  %48 = load i32, i32* %13, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %52, label %50

50:                                               ; preds = %40
  %51 = load i32, i32* %13, align 4
  store i32 %51, i32* %4, align 4
  store i32 1, i32* %15, align 4
  br label %61

52:                                               ; preds = %40
  %53 = load i32, i32* %13, align 4
  %54 = call i8* @GlobalLock(i32 %53)
  store i8* %54, i8** %11, align 8
  %55 = load i8*, i8** %11, align 8
  %56 = load i32, i32* %8, align 4
  %57 = call i32 @memcpy(i8* %55, i8* %19, i32 %56)
  %58 = load i32, i32* %13, align 4
  %59 = call i32 @GlobalUnlock(i32 %58)
  %60 = load i32, i32* %13, align 4
  store i32 %60, i32* %4, align 4
  store i32 1, i32* %15, align 4
  br label %61

61:                                               ; preds = %52, %50, %39, %31
  %62 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %62)
  %63 = load i32, i32* %4, align 4
  ret i32 %63
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @TRACE(i8*, i32, i32*, i32) #2

declare dso_local i32 @ILCombine(i32, i32) #2

declare dso_local i32 @SHGetPathFromIDListA(i32, i8*) #2

declare dso_local i32 @SHFree(i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @GlobalAlloc(i32, i32) #2

declare dso_local i8* @GlobalLock(i32) #2

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

declare dso_local i32 @GlobalUnlock(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
